service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasks-svc
  labels:
    app: flasks-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flasks
